1835. Tablet Trip bucket, empty screen.
Trying to break down my changes into smaller commits, for better/easier reviewing.
This commit brings the bare empty trip bucket screen to life.
Initial draft, will keep polishing this more as I work side by side with design.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -94,6 +94,8 @@
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
     <!-- Trip To -->
     <string name="trip_to">Trip To</string>
+    <!-- Trip bucket, trip is empty message -->
+    <string name="trip_empty">Your trip is empty.</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Flights to %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
