--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -170,6 +170,8 @@
     <string name="add_for_TEMPLATE">Add for %1$s</string>
     <!-- Describes a leg of a flight, e.g. "San Francisco to Paris" -->
     <string name="flight_cities_TEMPLATE">%1$s to %2$s</string>
+    <!-- A label describing the percent this flight is on time. e.g. "71% on time"-->
+    <string name="flight_on_time_TEMPLATE">%s%% on time</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
