--- a/project/res/values-in/strings.xml
+++ b/project/res/values-in/strings.xml
@@ -94,6 +94,8 @@
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
     <!-- Trip To -->
     <string name="trip_to">Perjalanan Ke</string>
+    <!-- Trip bucket, trip is empty message -->
+    <string name="trip_empty">Perjalanan Anda kosong.</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Penerbangan ke %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -148,17 +150,28 @@
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">menyarankan</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
-    <string name="rooms_left">kamar tersisa</string>
+    <plurals name="rooms_left">
+        <item quantity="zero">kamar tersisa</item>
+        <item quantity="one">kamar tersisa</item>
+        <item quantity="two">kamar tersisa</item>
+        <item quantity="few">kamar tersisa</item>
+        <item quantity="many">kamar tersisa</item>
+        <item quantity="other">kamar tersisa</item>
+    </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">dari 5</string>
     <!-- "Read Reviews" user reviews button text -->
     <string name="Read_Reviews">Baca Ulasan</string>
+    <!-- Text indicating a hotel room/rate is non-refundable -->
+    <string name="Non_Refundable">Tidak Dapat Dikembalikan</string>
 
     <!-- Tablet flight details -->
-    <!-- Name of button for selecting a flight. %1$s is a price. example: "Add for $345" -->
+    <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
     <string name="add_for_TEMPLATE">Tambahkan dengan membayar %1$s</string>
     <!-- Describes a leg of a flight, e.g. "San Francisco to Paris" -->
     <string name="flight_cities_TEMPLATE">%1$s ke %2$s</string>
+    <!-- A label describing the percent this flight is on time. e.g. "71% on time"-->
+    <string name="flight_on_time_TEMPLATE">%s%% tepat waktu</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
