--- a/project/res/values-it/strings.xml
+++ b/project/res/values-it/strings.xml
@@ -94,6 +94,8 @@
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
     <!-- Trip To -->
     <string name="trip_to">Viaggio a</string>
+    <!-- Trip bucket, trip is empty message -->
+    <string name="trip_empty">Il tuo viaggio è vuoto.</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Voli per %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -146,19 +148,30 @@
     <!-- Caption next to the user review rating bar, like "140 reviews" -->
     <string name="n_reviews_TEMPLATE">%1$s recensioni</string>
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
-    <string name="recommend">raccomanda questa struttura</string>
+    <string name="recommend">degli ospiti consiglia questa struttura</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
-    <string name="rooms_left">camere rimaste</string>
+    <plurals name="rooms_left">
+        <item quantity="zero">camere rimaste</item>
+        <item quantity="one">camera rimasta</item>
+        <item quantity="two">camere rimaste</item>
+        <item quantity="few">camere rimaste</item>
+        <item quantity="many">camere rimaste</item>
+        <item quantity="other">camere rimaste</item>
+    </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">su 5</string>
     <!-- "Read Reviews" user reviews button text -->
     <string name="Read_Reviews">Leggi le recensioni</string>
+    <!-- Text indicating a hotel room/rate is non-refundable -->
+    <string name="Non_Refundable">Non rimborsabile</string>
 
     <!-- Tablet flight details -->
-    <!-- Name of button for selecting a flight. %1$s is a price. example: "Add for $345" -->
+    <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
     <string name="add_for_TEMPLATE">Aggiungi al costo di %1$s</string>
     <!-- Describes a leg of a flight, e.g. "San Francisco to Paris" -->
     <string name="flight_cities_TEMPLATE">Itinerario di %1$s per %2$s</string>
+    <!-- A label describing the percent this flight is on time. e.g. "71% on time"-->
+    <string name="flight_on_time_TEMPLATE">%s%% in orario</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
