--- a/project/res/values-sv/strings.xml
+++ b/project/res/values-sv/strings.xml
@@ -94,6 +94,8 @@
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
     <!-- Trip To -->
     <string name="trip_to">Resa till</string>
+    <!-- Trip bucket, trip is empty message -->
+    <string name="trip_empty">Din resa är tom.</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Flyg till %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -148,17 +150,28 @@
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">rekommenderar</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
-    <string name="rooms_left">rum kvar</string>
+    <plurals name="rooms_left">
+        <item quantity="zero">rum kvar</item>
+        <item quantity="one">rum kvar</item>
+        <item quantity="two">rum kvar</item>
+        <item quantity="few">rum kvar</item>
+        <item quantity="many">rum kvar</item>
+        <item quantity="other">rum kvar</item>
+    </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
     <string name="out_of_5">av 5</string>
     <!-- "Read Reviews" user reviews button text -->
     <string name="Read_Reviews">Läs recensioner</string>
+    <!-- Text indicating a hotel room/rate is non-refundable -->
+    <string name="Non_Refundable">Ingen återbetalning</string>
 
     <!-- Tablet flight details -->
-    <!-- Name of button for selecting a flight. %1$s is a price. example: "Add for $345" -->
+    <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
     <string name="add_for_TEMPLATE">Lägg till för %1$s</string>
     <!-- Describes a leg of a flight, e.g. "San Francisco to Paris" -->
     <string name="flight_cities_TEMPLATE">%1$s till %2$s</string>
+    <!-- A label describing the percent this flight is on time. e.g. "71% on time"-->
+    <string name="flight_on_time_TEMPLATE">%s%% i tid</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
