--- a/project/res/values-zh-rHK/strings.xml
+++ b/project/res/values-zh-rHK/strings.xml
@@ -94,6 +94,8 @@
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
     <!-- Trip To -->
     <string name="trip_to">前往</string>
+    <!-- Trip bucket, trip is empty message -->
+    <string name="trip_empty">您的行程留空了。</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">飛往%1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -148,17 +150,28 @@
     <!-- Caption for percent of guests who recommend this hotel, i.e. "90% recommend" -->
     <string name="recommend">旅客推薦</string>
     <!-- Caption for number of rooms left count, i.e. 4 "rooms left" -->
-    <string name="rooms_left">間剩餘客房</string>
+    <plurals name="rooms_left">
+        <item quantity="zero">間剩餘客房</item>
+        <item quantity="one">間剩餘客房</item>
+        <item quantity="two">間剩餘客房</item>
+        <item quantity="few">間剩餘客房</item>
+        <item quantity="many">間剩餘客房</item>
+        <item quantity="other">間剩餘客房</item>
+    </plurals>
     <!-- Caption for user review count, i.e. 4.5 "out of 5" -->
-    <string name="out_of_5">/5</string>
+    <string name="out_of_5">總分 5 分</string>
     <!-- "Read Reviews" user reviews button text -->
     <string name="Read_Reviews">查閱評價</string>
+    <!-- Text indicating a hotel room/rate is non-refundable -->
+    <string name="Non_Refundable">不設退款</string>
 
     <!-- Tablet flight details -->
-    <!-- Name of button for selecting a flight. %1$s is a price. example: "Add for $345" -->
+    <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
     <string name="add_for_TEMPLATE">一併預訂加 %1$s</string>
     <!-- Describes a leg of a flight, e.g. "San Francisco to Paris" -->
     <string name="flight_cities_TEMPLATE">%1$s 至 %2$s</string>
+    <!-- A label describing the percent this flight is on time. e.g. "71% on time"-->
+    <string name="flight_on_time_TEMPLATE">%s%% 準時</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
